--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -1,13 +1,17 @@
 name: Fetch Report Data
 
+permissions:
+  contents: write  # Allows this workflow to push commits
+
 on:
   schedule:
-    - cron: '*/5 * * * *'  # Every 5 minutes
-  workflow_dispatch:
+    - cron: '*/5 * * * *'  # Runs every 5 minutes
+  workflow_dispatch:       # Allows manual trigger
 
 jobs:
   fetch:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -17,7 +21,7 @@ jobs:
         with:
           node-version: 18
 
-      - name: Install dependencies  # ✅ THIS STEP IS MISSING IN YOUR VERSION
+      - name: Install dependencies
         run: npm install
 
       - name: Run fetch script
@@ -25,10 +29,12 @@ jobs:
         env:
           API_KEY: ${{ secrets.API_KEY }}
 
-      - name: Commit data
+      - name: Commit and push data.json
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add data.json
-          git commit -m "Update report data"
-          git push
+          git commit -m "Update report data" || echo "No changes to commit"
+          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} HEAD:main
