--- a/.github/workflows/fetch.yml
+++ b/.github/workflows/fetch.yml
@@ -1,12 +1,12 @@
 name: Fetch Report Data
 
 permissions:
-  contents: write  # Allows this workflow to push commits
+  contents: write  
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  # Runs every 5 minutes
-  workflow_dispatch:       # Allows manual trigger
+    - cron: '*/5 * * * *'  
+  workflow_dispatch:       
 
 jobs:
   fetch:
